manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: forums-api
  labels:
    app: forums-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: forums-api
  template:
    metadata:
      labels:
        app: forums-api
    spec:
      containers:
        - name: forums-api
          image: 192.168.240.4/forums_api:latest
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 80
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 200m
              memory: 200Mi
