manifests/forums_db.yml

# Deployment for SQL:
apiVersion: apps/v1
kind: Deployment
metadata:
  name: forums-api-sql
  labels:
    app: forums-api-sql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: forums-api-sql
  template:
    metadata:
      labels:
        app: forums-api-sql
    spec:
      volumes: 
        - name: forums-api-sql-pv-storage
          persistentVolumeClaim:
          claimName: forums-api-sql-pvc
      containers:
      - image: mcr.microsoft.com/mssql/server:2022-latest
        name: forums-api-sql
        ports:
         -  containerPort: 1433
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 200m
            memory: 200Mi
        volumeMounts:
        - mountPath: "/var/lib/sqlserver/data"
          name: forums-api-sql-pv-storage
---

# Service for SQL:
apiVersion: v1
kind: Service
metadata:
  name: forums-api-sql-service
spec:
  type: ClusterIP
  ports:
  - name: "forums-api-sql"
    port: 1434
    targetPort: 1433
  selector:
    app: forums-api-sql
