manifests/forums_sql.yml
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: forums-sql-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mssql
    strategy:
      type: Recreate
    template:
      metadata:
        labels:
          app: mssql
        spec:
          terminationGracePeriodSeconds: 10
          securityContext:
            fsGroup: 1000
          containers:
          - name: forums_db
            image: mcr.microsoft.com/mssql/server:2022-latest
            volumeMounts:
            - name: mssqldb
              mountPath: /var/opt/mssql
          volumes:
          - name: mssqldb
            persistentVolumeClaim:
              claimName: mssql-data-pvc
---
# Load balancer:
apiVersion: apps/v1
kind: Service
metadata:
  name: mssql-service
spec:
  selector:
    app: mssql
  ports:
    - protocol: TCP
      port: 1434
      targetPort: 1433
  type: LoadBalancer
