manifests/service.yml
# Service for the API:
apiVersion: v1
kind: Service
metadata:
  name: forums-api-service
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: forums-api
