manifests/forums_api.yml
# Deployment of API:
apiVersion: apps/v1
kind: Deployment
metadata:
  name: forums-api
  labels:
    app: forums-api
spec:
  replicas: 1 # We need a minimum of 1 replica always running.
  selector:
    matchLabels:
      app: forums-api
  template:
    metadata:
      labels:
        app: forums-api
    spec:
      containers:
        - name: forums-api
          image: kinoroomregistry.azurecr.io/forumsservice:latest
          ports:
          - containerPort: 80
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 200m
              memory: 200Mi

---
# LoadBalancer service for the API:
apiVersion: v1
kind: Service
metadata:
  name: forums-api-service
spec:
  type: LoadBalancer
  ports:
    - port: 80
  selector:
    app: forums-api
---
# Ingress controller for inter-cluster communication:
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: forums-api-ingress
  labels:
    app: forums-api-ingress
spec:
  rules:
  - http:
    paths:
    - path: /
      pathType: Prefix
      backend:
        service:
          name: forums-api-service
          port:
            number: 80
